2003-04-21  Murray Cumming  <murrayc@usa.net>

	* examples/book/Makefile.am: Added idle directory.
	* configure.in: Added examples/book/idle/Makefile.

2003-03-30  Gene Ruebsamen <gene@erachampion.com>

	* examples/book/timeout/timerexample.[cc,h]: update examples to
	work with Gtkmm2.
	* examples/book/idle/idleexample.[cc,h]: create new idle directory and
	examples for Gtkmm2.
	* docs/tutorial/gtkmm-tut.xml: update the idle/timeout chapter for
	Gtkmm2 and modify to use the program listings in the examples/book/
	directories.
	
2003-04-21 Oli Kessler <ok@tor.ch>
       
         * gtk/gtk_docs_override.xml, fixed docu bug in the function
         gtk_window_set_default
	
2003-04-15  Ole Laursen  <olau@hardworking.dk>

	* gtk/src/widget.{cc,h}g: Added unset_fg/bg/font/text/base to
	support unwrapped null pointer parameter to modify_fg/bg/....

2003-04-13  Ole Laursen  <olau@hardworking.dk>

	* examples/cellrenderercustom/cellrendererpopup.cc: Switched to
	using wrappers of grab_add and friends instead of using the C
	functions.

	* gtk/src/main.ccg, gtk/src/main.hg: Removed commented wrapper of
	grab_add and friends.

	* gtk/src/widget.ccg, gtk/src/widget.hg: Wrapped
	gtk_grab_add()/remove()/get_current().

2003-03-30  Murray Cumming  <murrayc@usa.net>

        * gtk/gtk_docs_override.xml, likewise atk, pango: Added overrides for
 	docs that mention *_free() functions.
	
2003-03-26  Martin Schulze  <MHL.Schulze@t-online.de>

	* pango/src/attrlist.{ccg,hg}: AttrList::insert,
	AttrList::insert_before, AttrList::change must pass a copy of
	the attribute parameter into the c functions (should fix #109334).

2003-03-22  Enrico Scholz  <enrico.scholz@informatik.tu-chemnitz.de>
 
	* examples/Makefile.am_fragment:  Added DESTDIR-support. 

2003-03-20  Ole Laursen  <olau@hardworking.dk>

	* gtk/src/widget.hg: Applied patch from Detlef Reichl to add
	protected set_window and set_allocation (#108484).	

2003-03-18  Cedric Gustin  <cgustin@ibelgique.com>
