@@ -7,5 +7,5 @@ Name: AtkMM
 Description: C++ wrapper for atk
 Requires: glibmm-2.0 atk
 Version: @VERSION@
-Libs: -L${libdir} -latkmm-1.0
+Libs: -L${libdir} -latkmm-1.3
 Cflags: -I${includedir}/gtkmm-2.0
