@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: GDKmm
 Description: C++ wrappers for GLib, GTK+, and Pango
-Requires: glibmm-2.0 pangomm-1.0 gdk-2.0
+Requires: glibmm-2.4 pangomm-1.0 gdk-2.0
 Version: @VERSION@
-Libs: -L${libdir} -lgdkmm-2.0
-Cflags: -I${includedir}/gtkmm-2.0 -I${libdir}/gtkmm-2.0/include
+Libs: -L${libdir} -lgdkmm-2.3
+Cflags: -I${includedir}/gtkmm-2.4 -I${libdir}/gtkmm-2.4/include
