@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: GTKmm
 Description: C++ wrapper for GTK+
-Requires: glibmm-2.0 gdkmm-2.0 pangomm-1.0 atkmm-1.0 gtk+-2.0 
+Requires: glibmm-2.4 gdkmm-2.4 pangomm-1.4 atkmm-1.0 gtk+-2.0
 Version: @VERSION@
-Libs: -L${libdir} -lgtkmm-2.0
-Cflags: -I${includedir}/gtkmm-2.0 -I${libdir}/gtkmm-2.0/include
+Libs: -L${libdir} -lgtkmm-2.4
+Cflags: -I${includedir}/gtkmm-2.4 -I${libdir}/gtkmm-2.4/include
