@@ -58,6 +58,7 @@ typedef Gtk::ComboDropDownItem Element;
 
 #m4 include(list.m4)
   GP_LIST(ComboDropDownList,ComboDropDown,GtkList,ComboDropDownItem,children)
+  GP_LIST_ITER(Glib::List_Cpp_Iterator<GtkListItem, ComboDropDownItem>)
   GP_LIST_FIND()
   GP_LIST_END()
 
