@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: Pangomm
 Description: C++ wrapper for Pango
-Requires: glibmm-2.0 pango
+Requires: glibmm-2.4 pango
 Version: @VERSION@
-Libs: -L${libdir} -lpangomm-1.0
-Cflags: -I${includedir}/gtkmm-2.0
+Libs: -L${libdir} -lpangomm-1.3
+Cflags: -I${includedir}/gtkmm-2.4
