@@ -1,5 +1,12 @@
 2003-04-21  Murray Cumming  <murrayc@usa.net>
 
+	* gtk/src/menushell.ccg: Added 
+	GP_LIST_ITER(Glib::List_Cpp_Iterator<GtkListItem, ComboDropDownItem> 
+	because the standard GP_LIST iterator seems to be useless. See bug
+	#110206.
+	
+2003-04-21  Murray Cumming  <murrayc@usa.net>
+
 	* examples/book/Makefile.am: Added idle directory.
 	* configure.in: Added examples/book/idle/Makefile.
 
